# snake_game

src/: CMakeLists.txt  ai.cpp  ai.h  bot.cpp  bot.h  food.cpp  food.h  main.cpp  map.cpp  map.h  score.cpp  score.h  snake.cpp  snake.h
src/lol/: ai.cpp  ai.h
